[tool.poetry]
name = "salmon"
version = "0.9.0"
description = "An uploading script for Gazelle-based music trackers."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.0"
bs4 = "^0.0.1"
colorama = "^0.4.3"
dottorrent = "^1.10.1"
musicbrainzngs = "^0.7.1"
mutagen = "^1.44.0"
pyperclip = "^1.7.0"
pycryptodome = "^3.9.6"
aiohttp = "^3.6.2"
aiohttp-jinja2 = "^1.2.0"
jinja2 = "^2.11.3"
pyimgur = "^0.6.0"
bitstring = "^3.1.6"
heybrochecklog = "^1.3.2"
yaspin = "^0.16.0" 
ratelimit = "^2.2.1"
rich = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"

[tool.black]
line-length = 88
target-version = ['py36']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
